[package]
name = "simmons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log4rs = "1.1.1"
mr_world_core = { path = "/home/no/mine/projects/finance/mr_world/mr_world_core" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"] }
env_logger = "0.9"
log = "0.4.17"
tokio-stream = "0.1.9"
tonic = "0.8"
prost = "0.11"
futures = "0.3.24"
chrono = "0.4.22"
serde = "1.0.144"
serde_json = "1.0"
rdkafka = "0.28.0"
rand = "0.8.5"
substring = "1.4.5"
